--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NFT</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <script src="darkmode.js" defer></script>
-    <script type="text/javascript" src="style.js" defer></script>
+    <script src="./scripts/darkmode.js" defer></script>
+    <script type="text/javascript" src="./scripts/style.js" defer></script>
+    <script src="./scripts/countdown.js" defer></script>
     <link rel="stylesheet" href="home.css">
     <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
@@ -209,7 +210,7 @@
                         </a>
                         <div class="item__countdown--1 item__countdown">
                             <i class="fa-solid fa-clock"> </i>
-                            <p> 2 : 13 : 45 : 12</p>
+                            <p class="timer1"> 2 : 13 : 45 : 12</p>
                         </div>
                     </div>
                     <h5 class="auctions--1__title--text">"Hamlet Contemplates Yorick's...</h5>
@@ -249,7 +250,7 @@
                         </a>
                         <div class="item__countdown--2 item__countdown">
                             <i class="fa-solid fa-clock"></i>
-                            <p>5 : 23 : 22 : 08</p>
+                            <p class="timer2">5 : 23 : 22 : 08</p>
                         </div>
                     </div>
                     <h5>"Hamlet Contemplates Yorick's...</h5>
@@ -289,7 +290,7 @@
                         </a>
                         <div class="item__countdown--3 item__countdown">
                             <i class="fa-solid fa-clock"></i>
-                            <p>12 : 21 : 02 : 57</p>
+                            <p class="timer3">12 : 21 : 02 : 57</p>
                         </div>
                     </div>
                     <h5>"Hamlet Contemplates Yorick's...</h5>
@@ -329,7 +330,7 @@
                         </a>
                         <div class="item__countdown--4 item__countdown">
                             <i class="fa-solid fa-clock"></i>
-                            <p>01 : 06 : 45 : 24</p>
+                            <p class="timer4">01 : 06 : 45 : 24</p>
                         </div>
                     </div>
                     <h5>"Hamlet Contemplates Yorick's...</h5>
