--- a/index.html
+++ b/index.html
@@ -147,11 +147,11 @@
                 <img class="hero__ellipse--3 hero__img" src="./assets/axies-images/02_hero/Ellipse 10.svg" alt="ellipse">
                 <img class="hero__ellipse--4 hero__img" src="./assets/axies-images/02_hero/Ellipse 10.svg" alt="ellipse">
                 <img class="hero__planet hero__img"src="./assets/axies-images/02_hero/planet.svg" alt="planet">
-                <img class="hero__plus--1 hero__img" src="./assets/axies-images/02_hero/plus.svg" alt="plus">
+                <!-- <img class="hero__plus--1 hero__img" src="./assets/axies-images/02_hero/plus.svg" alt="plus"> -->
                 <img class="hero__plus--2 hero__img" src="./assets/axies-images/02_hero/plus.svg" alt="plus">
                 <img class="hero__plus--3 hero__img" src="./assets/axies-images/02_hero/plus.svg" alt="plus">
                 <img class="hero__plus--4 hero__img" src="./assets/axies-images/02_hero/plus.svg" alt="plus">
-                <img class="hero__plus--5 hero__img" src="./assets/axies-images/02_hero/plus.svg" alt="plus">
+                <!-- <img class="hero__plus--5 hero__img" src="./assets/axies-images/02_hero/plus.svg" alt="plus"> -->
                 <img class="hero__star--1 hero__img" src="./assets/axies-images/02_hero/Star.svg" alt="star">
                 <img class="hero__star--2 hero__img" src="./assets/axies-images/02_hero/Star.svg" alt="star">
                 <img class="hero__star--3 hero__img" src="./assets/axies-images/02_hero/Star.svg" alt="star">
@@ -606,7 +606,7 @@
             </div>
            
 
-            <div class="today__row--1">
+            <div class="today__grid">
                 <div class="today__item--1 today__item">
                     <div class="today__wrapper--1">
                     </div>
@@ -720,12 +720,6 @@
                     </div>
                 </div> 
 
-
-            </div>
-
-            
-
-            <div class="today__row--2">
 
                 <div class="today__item--5 today__item">
                     <div class="today__wrapper--5">
